pennydjango/static/css/base.css
/* Main Content */
.main-content-row {min-height: calc(100vh - 7.5rem);}
.display-none {display:none;}
.ln-25 {line-height: 25px;}
.mx-w-250{max-width: 250px;}
.mx-w-450{max-width: 450px;}
.box-wd {width: 100%;height: 190px;}
.badge-new{
    position: absolute;
    right: 0;
    top: 0;
}
.main-scroll{
    height: calc(100vh - 5.8rem);
    overflow-y: auto;
}

/* Nav bars */
.main-navbar .navbar {
    height: 2.75rem;
}

.inner-sidebar {
    position: relative;
    height: 100%;
    box-shadow: none;
}
.inner-sidebar .nav .nav-item, .main-sidebar .nav .nav-link {
    white-space: nowrap;
    min-width: 100%;
    max-width: 100%;
    overflow: hidden;
    text-overflow: ellipsis;
    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
    will-change: background-color,box-shadow,color;
    transition: box-shadow .2s ease,color .2s ease,background-color .2s ease;
    font-size: .85rem;
}
.inner-sidebar .nav .nav-item .nav-link {
    border-bottom: 1px solid #e1e5eb;
    font-weight: 400;
    color: #3d5170;
    padding: .9375rem 1.5625rem;
}

.inner-sidebar .nav .nav-item .nav-link i {
    min-width: 1.25rem;
    font-size: 90%;
    text-align: center;
    vertical-align: middle;
    will-change: color;
    color: #cacedb;
    transition: color .2s ease;
    margin-right: .375rem
}
.inner-sidebar .nav .nav-item.title .nav-link {
    font-size: 1.4rem;
    padding-bottom: 30px;
}


.inner-sidebar .nav .nav-item .nav-link i.material-icons {
    font-size: 1.125rem;
    top: -1px
}

.inner-sidebar .nav .nav-item .nav-link.active,
.inner-sidebar .nav .nav-item:not(.title) .nav-link:hover,
.inner-sidebar .nav .nav-item.active,.inner-sidebar .nav .nav-item:not(.title):hover {
    box-shadow: inset .1875rem 0 0 #007bff;
    background-color: #fbfbfb;
    color: #007bff
}

.inner-sidebar .nav .nav-item .nav-link.active i,.inner-sidebar .nav .nav-item .nav-link:hover i,.inner-sidebar .nav .nav-item.active i,.inner-sidebar .nav .nav-item:hover i {
    color: #007bff
}

div.circle-avatar{
    padding-top: 100%;
    border-radius: 50%;

    background-position-y: center;
    background-position-x: center;
    background-repeat: no-repeat;
    background-size: cover;
}
.dropdown-toggle.no-caret::after {
    display:none;
}

.filter-container {
    margin: 3px;
}
.rooms-container {
    padding: 3px;
    display: flex;
    flex-direction: row;
}
.room-div {
    width: 100%;
    height: 100%;
    padding: 6px;
    color: #000000bd;
    text-align: center;
    user-select: none;
    cursor: pointer;
}
.room-div.selected {
    background-color: #679df6;
}
.pets-container {
    padding: 0 10px;
    width: 200px;
}
.dropdown-checkbox-container {
    padding: 0 10px;
    width: 250px;
    max-height: 350px;
    overflow-y: auto;
    user-select: none;
}
.borough-container {
    padding: 0 10px;
}
.hoods-container {
    padding: 10px;
    width: 250px;
    max-height: 350px;
    overflow-y: auto;
    user-select: none;
}
.agents-container {
    padding: 0 10px;
    width: 200px;
    max-height: 350px;
    overflow-y: auto;
    user-select: none;
}
.no-caret .dropdown-toggle::after {
    display: none;
}
span.times {
    background-color: white;
    color: black;
    border-radius: 50%;
    margin-right: -6px;
    margin-left: 6px;
    padding: 0 3px;
    font-weight: 700;
}

/* Cards */
.card.card-listing {
    box-shadow: none;
    -webkit-border-radius: 0;
    -moz-border-radius: 0;
    border-radius: 0;
}
.card span.badge.badge-pill {
    font-size: 100%;
}
.overlay-parent .overlay {
    position:absolute;
    left: 0;
    top: 0;
    bottom: 0;
    right: 0;
    z-index: 1;
}
.overlay-parent a {
    position:absolute;
    z-index: 2;
}

.listing-info .wrap-info{
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
    max-width: 100px;
}
.card-post__category.left-badge {
    right: initial;
    left: .9375rem;
    position: absolute;
    z-index: 10;
}

img.d-block.w-100 {
    height: 350px;
}

ul.ul-2 {
  columns: 2;
  -webkit-columns: 2;
  -moz-columns: 2;
}
ul.ul-2 > li {
    text-transform: capitalize;
}

.map-panel {
    padding-right: 0;
    padding-left: 0;
}

.select2.select2-container {
    width: 100% !important;
}


/* Wizard */
.wizard-tab {
    color: #5a6169;
    padding-right: 15px;
    padding-left: 15px;
    border-right: 1px solid;
}
a.wizard-tab:hover {
    color: #5a6169;
    text-decoration: underline !important;
}
.wizard-tab.active {
    font-weight: bold;
    text-decoration: underline;
}

/* Forms */
form.full-w .select2-container {
    width: 100% !important;
}

/* Listings */
.contact-avatar{
    display: block;
    margin: auto;
    width: 70%;
}

.new-listing-card{
    margin-bottom: 10px;
}
.new-listing-card .listing-admin-area {
    padding-top: 15px;
    padding-bottom: 15px;
}
.new-listing-card .listing-area-content {
    border: 1px solid #e1e5eb;
}
div.listing-card-stub {
    border-left: 0;
    border-right: 0;
}
div.listing-card-stub div.col-6 {
    border-right: 1px solid #e1e5eb;
}
div.listing-card-stub div.col-6:nth-of-type(2) {
    border-right: 0;
}
div.listing-card-stub div.col-6, div.listing-card-stub div.col-12 {
    font-size: 12px;
    padding-top: 10px;
    padding-left: 5px;
    padding-right: 5px;
    padding-bottom: 10px;
    border-bottom: 1px solid #e1e5eb;
}
div.listing-first-data-col, div.listing-second-data-col {
    font-size: 12px;
    border-left: 1px solid #e1e5eb;
    overflow-y: hidden;
}
div.listing-area-data-row {
    padding-top: 8px;
    padding-bottom: 8px;
    border-bottom: 1px solid #e1e5eb;
    overflow-y: hidden;
}
hr.divider-hr {
    height:4px;
    border-radius:100%;
    background-color:#c3c7cc;
}

/*  Collections  */
.collection-modal-field {
    margin-bottom: .5rem;
}
.collection-modal-title {
    margin-bottom: 0;
}
.collection-modal-body {
    padding: 1rem;
}
.collection-modal-error {
    border: solid 1px red;
    margin-bottom: 10px;
    color: #b20000;
    background-color: #ffb2b2;
    font-size: .8rem;
}
.collection-share-button {
    float: right;
    margin: 7px 0 0 7px;
}


/*    Jobs   */
.jobs-link {
    padding-top: 5px;
    padding-bottom: 5px;
}
.jobs-link, .jobs-link:hover {
    color: rgba(0,0,0,.5);
}


/*    Settings gear    */
.settings-gear {
    font-size: 2rem;
    margin-left: 5px;
    opacity: 0.5;
    cursor: pointer;
    user-select: none;
}
.settings-gear:hover {
    opacity: 1;
}
.settings-dropdown {
    margin-left: auto;
    height: 40px;
}

/*   Switch   */
.switch {
  position: relative;
  display: inline-block;
  width: 60px;
  height: 34px;
  margin: auto auto auto 0;
}
.switch input { 
  opacity: 0;
  width: 0;
  height: 0;
}
.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: .4s;
  transition: .4s;
}
.slider:before {
  position: absolute;
  content: "";
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  -webkit-transition: .4s;
  transition: .4s;
}
input:checked + .slider {
  background-color: #2196F3;
}
input:focus + .slider {
  box-shadow: 0 0 1px #2196F3;
}
input:checked + .slider:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}
/* Rounded sliders */
.slider.round {
  border-radius: 34px;
}
.slider.round:before {
  border-radius: 50%;
}

/*    Mapbox    */
.mapbox-component {
    height: 100%;
}
#map {
    position:absolute;
    top:0;
    bottom:0;
    width:100%;
}
#id_geopoint {
    display: none;
}

.nearby-transit  {
    font-size: 12px;
}
.nearby-transit div {
    padding: 10px 5px 10px;
}
.new-listing-badge.badge.badge-pill.badge-success {
    right: 5.9375rem;
    position: absolute;
    z-index: 10;
}

/*    Users cards    */
.usercards-container {
    margin: .625rem 3rem;
}
.usercard-badge {
    margin: 0.8rem;
    position: absolute;
    right: 0;
    font-size: 1rem;
    user-select: none;
}
.usercard-inactive-badge {
    margin: 0.8rem;
    position: absolute;
    font-size: 1rem;
    user-select: none;
}
.usercard-modal {
    position: absolute;
    bottom: 0px;
    right: 5px;
}
.block-center {
    display: block;
    margin: auto;
}
.top-right {
    top: 0;
    right: 0;
}

.lease-status, .lease-status .progress-bar {
    height: 2.625rem;
}


/*    Transactions    */
.transactions {
    color: #212529;
    padding: 10px 0 30px 40px;
}


/*    Collections    */
div.modal-body>p {
    margin: 0;
}
.collection-card-name {
    position: absolute;
    bottom: 0px;
    color: white;
    background: linear-gradient(to bottom, transparent 0%, rgba(0,0,0,0.85) 66%, #000 100%);
    width: 100%;
    border-radius: inherit;
    height: 50%;
    align-items: flex-end;
    display: flex;
    padding: 5px;
    font-size: 1.3rem;
}
.collection-card-count {
    position: absolute;
    background-color: #437cc4;
    color: white;
    padding: 0 0.7rem;
    border-radius: 20px;
    margin: 0.4rem;
    border: solid 0.05rem;
}
.loader {
    border: 16px solid #f3f3f3;
    border-radius: 50%;
    border-top: 16px solid #017bff;
    width: 80px;
    height: 80px;
    -webkit-animation: spin 2s linear infinite; /* Safari */
    animation: spin 2s linear infinite;
    position: fixed;
    margin-left: 25%;
  }
  
  /* Safari */
  @-webkit-keyframes spin {
    0% { -webkit-transform: rotate(0deg); }
    100% { -webkit-transform: rotate(360deg); }
  }
  
  @keyframes spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
  }

  #paymentModal .modal-content .loader {
      margin-top: -20%;
  }
  #plaidModal .modal-body .loader {
    margin-top: -10%;
}
#amount_plaid {
    width: 79%;
  }

